# snake-game-sdl2

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: app.cpp  button.cpp  button.h  input.cpp  input.h  main.cpp  main.cpp:Zone.Identifier  renderer.cpp  renderer.h  snake_game.cpp  snake_game.h  state.h  text.cpp  text.h  time_utils.h
